namespace Code.Game
{
    public static class Names
    {
        public const string SPEED = "Speed";
        public const string JUMP = "Jump";
        public const string ATTACK = "Attack";
        public const string HORIZONTAL = "Horizontal";
        public const string VERTICAL = "Vertical";
    }
}
